# pppi-web-browser

./: .gitignore  Browser.chm  Browser.hhp  CMakeLists.txt  Doxyfile  README.md  index.html
docs/: commit-guidelines.md
docs/doxygen/html/: _address_bar_8h_source.html  _bookmark_manager_8h_source.html  _cookie_manager_8h_source.html  _download_manager_8h_source.html  _extension_a_p_i_8h_source.html  _html_parser_8h_source.html  _media_controls_8h_source.html  _tab_group_8h_source.html  _thread_pool_8h_source.html  _tool_bar_8h_source.html  _touch_handler_8h_source.html  _web_renderer_8h_source.html  _web_rendering_8h_source.html  annotated.html  annotated_dup.js  class_address_bar-members.html  class_address_bar.html  class_bookmark_manager-members.html  class_bookmark_manager.html  class_browser_core-members.html  class_browser_core.html  class_browser_core.js  class_browser_u_i-members.html  class_browser_u_i.html  class_browser_u_i.js  class_cookie_manager-members.html  class_cookie_manager.html  class_download_manager-members.html  class_download_manager.html  class_extension_a_p_i-members.html  class_extension_a_p_i.html  class_extension_manager-members.html  class_extension_manager.html  class_history_manager-members.html  class_history_manager.html  class_history_manager.js  class_html_parser-members.html  class_html_parser.html  class_i_browser_core-members.html  class_i_browser_core.html  (+125 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
docs/labs/: ЛР 1.docx  ЛР 2.docx  ЛР 3.docx  ЛР 4.docx  ЛР 5.docx
docs/static/: Index.hhk  Table of Contents.hhc  crossplatform.html  extensions.html  history.html  index.html  multimedia.html  network.html  perfomance.html  render.html  security.html  summary.html  tabs.html  ui.html
include/core/: BrowserCore.h
include/extensions/: ExtensionManager.h
include/history/: HistoryManager.h
include/multimedia/: MediaPlayer.h
include/network/: NetworkManager.h
include/perfomance/: PerfomanceOptimizer.h
include/platfrom/: PlatformAdapter.h
include/rendering/: WebRenderer.h
include/security/: SecurityManager.h
include/tabs/: TabManager.h
include/ui/: BrowserUI.h
src/core/: BrowserCore.cpp  BrowserCore.h  CMakeLists.txt  main.cpp
src/extensions/: CMakeLists.txt  ExtensionAPI.h  ExtensionApi.cpp  ExtensionManager.cpp  ExtensionManager.h
src/history/: BookmarkManager.cpp  BookmarkManager.h  CMakeLists.txt  HistoryManager.cpp  HistoryManager.h
src/multimedia/: CMakeLists.txt  MediaControls.cpp  MediaControls.h  MediaPlayer.cpp  MediaPlayer.h
src/network/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  NetworkManager.cpp  NetworkManager.h
src/perfomance/: CMakeLists.txt  PerfomanceOptimizer.cpp  PerfomanceOptimizer.h  ThreadPool.cpp  ThreadPool.h
src/platfrom/: CMakeLists.txt  PlatformAdapter.cpp  PlatformAdapter.h  TouchHandler.cpp  TouchHandler.h
src/rendering/: CMakeLists.txt  HtmlParser.cpp  HtmlParser.h  WebRenderer.cpp  WebRendering.h
src/security/: CMakeLists.txt  CookieManager.cpp  CookieManager.h  SecurityManager.cpp  SecurityManager.h
src/tabs/: CMakeLists.txt  TabGroup.h  TabManager.h
src/ui/: AddressBar.cpp  AddressBar.h  BrowserUI.cpp  BrowserUI.h  CMakeLists.txt  ToolBar.cpp  ToolBar.h
tests/: CMakeLists.txt  tst_core.cpp  tst_extensions.cpp  tst_history.cpp  tst_multimedia.cpp  tst_network.cpp  tst_perfomance.cpp  tst_platform.cpp  tst_rendering.cpp  tst_security.cpp  tst_tabs.cpp  tst_ui.cpp
